fix css on small screens

--- a/components/ColorsGenerator/ColorsGenerator.module.css
+++ b/components/ColorsGenerator/ColorsGenerator.module.css
@@ -1,7 +1,7 @@
 .colors {
   height: calc(100vh - 96px);
   width: 100%;
-  padding: 24px;
+  padding: 45px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,13 +12,16 @@
 .form {
   display: flex;
   position: absolute;
-  top: 50%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  bottom: -15px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .form input {
-  width: 340px;
+  width: 100%;
   height: 45px;
   outline: none;
   border: 2px solid white;
@@ -33,6 +36,7 @@
 }
 
 .form button {
+  height: 45px;
   cursor: pointer;
   padding: 0 15px;
   border: 2px solid white;
@@ -50,5 +54,14 @@
   .colors {
     flex-direction: row;
     padding: 64px;
+  }
+
+  .form {
+    width: 100%;
+    top: 50%;
+  }
+
+  .form {
+    width: 450px;
   }
 }
